--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
     "server": "nodemon backend/server.js",
-    "start": "node backend/server.js",
-    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
+    "start": "node backend/server.js"
   },
   "type": "module",
   "keywords": [],
